--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
           <input type="text" id="hero-field" name="state" class="w-full bg-gray-100 rounded border bg-opacity-50 border-gray-300 focus:ring-2 focus:ring-indigo-200 focus:bg-transparent focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
         </div> -->
         <a href="{% url 'beds' %}">
-          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Serach</button>
+          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Search</button>
         </a>
       </div>
       <!-- <p class="text-sm mt-2 text-gray-500 mb-8 w-full">This Data Refresh In Every 30 Minutes</p> -->
@@ -80,7 +80,7 @@
         <p class="leading-relaxed text-base"> We Will Provide You A Oxygen ASAP, We Will There For You🤞</p>
         <a href="{% url 'oxygen' %}">
           <button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded">
-            Search 
+            Search
           </button>
         </a>
       </div>
